src/bindings_linux_armv8.rs

unsafe extern "C" {
    #[doc = " @noop FT_Read\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Read data from the device.\n @param ftHandle Handle of the device.\n @param lpBuffer Pointer to the buffer that receives the data from the device.\n @param dwBytesToRead Number of bytes to be read from the device.\n @param lpdwBytesReturned Pointer to a variable of type DWORD which receives the number of\n bytes read from the device.\n @returns\n FT_OK if successful, FT_IO_ERROR otherwise. $see FT_STATUS\n @remarks\n FT_Read always returns the number of bytes read in lpdwBytesReturned.\n @n This function does not return until dwBytesToRead bytes have been read into the buffer. The number of\n bytes in the receive queue can be determined by calling FT_GetStatus or FT_GetQueueStatus, and\n passed to FT_Read as dwBytesToRead so that the function reads the device and returns immediately.\n When a read timeout value has been specified in a previous call to FT_SetTimeouts, FT_Read returns\n when the timer expires or dwBytesToRead have been read, whichever occurs first. If the timeout\n occurred, FT_Read reads available data into the buffer and returns FT_OK.\n @n An application should use the function return value and lpdwBytesReturned when processing the buffer.\n If the return value is FT_OK, and lpdwBytesReturned is equal to dwBytesToRead then FT_Read has\n completed normally. If the return value is FT_OK, and lpdwBytesReturned is less then dwBytesToRead\n then a timeout has occurred and the read has been partially completed. Note that if a timeout occurred\n and no data was read, the return value is still FT_OK.\n @n A return value of FT_IO_ERROR suggests an error in the parameters of the function, or a fatal error like a\n USB disconnect has occurred."]
    pub fn FT_Read(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToRead: DWORD,
        lpdwBytesReturned: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Write\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Write data to the device.\n @param ftHandle Handle of the device.\n @param lpBuffer Pointer to the buffer that contains the data to be written to the device.\n @param dwBytesToWrite Number of bytes to write to the device.\n @param lpdwBytesWritten Pointer to a variable of type DWORD which receives the number of\n bytes written to the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Write(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToWrite: DWORD,
        lpdwBytesWritten: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetBaudRate\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the baud rate for the device.\n @param ftHandle Handle of the device.\n @param dwBaudRate Baud rate.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code"]
    pub fn FT_SetBaudRate(ftHandle: FT_HANDLE, dwBaudRate: ULONG) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetDivisor\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the baud rate for the device. It is used to set non-standard baud rates.\n @param ftHandle Handle of the device.\n @param usDivisor Divisor.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is no longer required as FT_SetBaudRate will now automatically calculate the required\n divisor for a requested baud rate. The application note \"Setting baud rates for the FT8U232AM\" is\n available from the Application Notes section of the FTDI website describes how to calculate the divisor for\n a non-standard baud rate."]
    pub fn FT_SetDivisor(ftHandle: FT_HANDLE, usDivisor: USHORT) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetDataCharacteristics\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the data characteristics for the device.\n @param ftHandle Handle of the device.\n @param uWordLength Number of bits per word - must be FT_BITS_8 or FT_BITS_7.\n @param uStopBits Number of stop bits - must be FT_STOP_BITS_1 or FT_STOP_BITS_2.\n @param uParity Parity - must be FT_PARITY_NONE, FT_PARITY_ODD, FT_PARITY_EVEN,\n FT_PARITY_MARK or FT_PARITY SPACE.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetDataCharacteristics(
        ftHandle: FT_HANDLE,
        uWordLength: UCHAR,
        uStopBits: UCHAR,
        uParity: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetTimeouts\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the read and write timeouts for the device.\n @param ftHandle Handle of the device.\n @param dwReadTimeout Read timeout in milliseconds.\n @param dwWriteTimeout Write timeout in milliseconds.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetTimeouts(
        ftHandle: FT_HANDLE,
        dwReadTimeout: ULONG,
        dwWriteTimeout: ULONG,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetFlowControl\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the flow control for the device.\n @param ftHandle Handle of the device.\n @param usFlowControl Must be one of FT_FLOW_NONE, FT_FLOW_RTS_CTS, FT_FLOW_DTR_DSR or\n FT_FLOW_XON_XOFF.\n @param uXonChar Character used to signal Xon. Only used if flow control is FT_FLOW_XON_XOFF.\n @param uXoffChar Character used to signal Xoff. Only used if flow control is\tFT_FLOW_XON_XOFF.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetFlowControl(
        ftHandle: FT_HANDLE,
        usFlowControl: USHORT,
        uXonChar: UCHAR,
        uXoffChar: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetDtr\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the Data Terminal Ready (DTR) control signal.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function asserts the Data Terminal Ready (DTR) line of the device."]
    pub fn FT_SetDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ClrDtr\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function clears the Data Terminal Ready (DTR) control signal.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function de-asserts the Data Terminal Ready (DTR) line of the device."]
    pub fn FT_ClrDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetRts\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the Request To Send (RTS) control signal.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function asserts the Request To Send (RTS) line of the device."]
    pub fn FT_SetRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ClrRts\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function clears the Request To Send (RTS) control signal.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function de-asserts the Request To Send (RTS) line of the device."]
    pub fn FT_ClrRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetModemStatus\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Gets the modem status and line status from the device.\n @param ftHandle Handle of the device.\n @param lpdwModemStatus Pointer to a variable of type DWORD which receives the modem\n status and line status from the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n The least significant byte of the lpdwModemStatus value holds the modem status. On Windows and\n Windows CE, the line status is held in the second least significant byte of the lpdwModemStatus value.\n @n The modem status is bit-mapped as follows: Clear To Send (CTS) = 0x10, Data Set Ready (DSR) = 0x20,\n Ring Indicator (RI) = 0x40, Data Carrier Detect (DCD) = 0x80.\n @n The line status is bit-mapped as follows: Overrun Error (OE) = 0x02, Parity Error (PE) = 0x04, Framing\n Error (FE) = 0x08, Break Interrupt (BI) = 0x10."]
    pub fn FT_GetModemStatus(ftHandle: FT_HANDLE, lpdwModemStatus: *mut ULONG) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetQueueStatus\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Gets the number of bytes in the receive queue.\n @param ftHandle Handle of the device.\n @param lpdwAmountInRxQueue Pointer to a variable of type DWORD which receives the number of\n bytes in the receive queue.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_GetQueueStatus(ftHandle: FT_HANDLE, lpdwAmountInRxQueue: *mut DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetDeviceInfo\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Get device information for an open device.\n @param ftHandle Handle of the device.\n @param lpftDevice Pointer to unsigned long to store device type.\n @param lpdwID Pointer to unsigned long to store device ID.\n @param pcSerialNumber Pointer to buffer to store device serial number as a nullterminated string.\n @param pcDescription Pointer to buffer to store device description as a null-terminated string.\n @param pvDummy Reserved for future use - should be set to NULL.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is used to return the device type, device ID, device description and serial number.\n The device ID is encoded in a DWORD - the most significant word contains the vendor ID, and the least\n significant word contains the product ID. So the returned ID 0x04036001 corresponds to the device ID\n VID_0403&PID_6001."]
    pub fn FT_GetDeviceInfo(
        ftHandle: FT_HANDLE,
        lpftDevice: *mut FT_DEVICE,
        lpdwID: LPDWORD,
        pcSerialNumber: PCHAR,
        pcDescription: PCHAR,
        pvDummy: LPVOID,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @note Extra function for non-Windows platforms to compensate for lack of .INF file to specify Vendor and Product IDs."]
    pub fn FT_GetDeviceLocId(ftHandle: FT_HANDLE, lpdwLocId: LPDWORD) -> FT_STATUS;
}
